--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image to ACR
+name: Build, Push to ACR, and Deploy to Azure Web App
 
 on:
   push:
@@ -26,3 +26,13 @@ jobs:
           tags: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/mi-imagen:${{ github.sha }}
           file: ./Dockerfile
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    steps:
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ secrets.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          images: ${{ secrets.AZURE_REGISTRY_NAME }}.azurecr.io/mi-imagen:${{ github.sha }}
